--- a/app/globals.css
+++ b/app/globals.css
@@ -264,6 +264,78 @@
   font-size: 1rem;
   line-height: 1.5;
 }
+
+.ho-effect a {
+  overflow: hidden;
+  position: relative;
+  display: inline-block;
+}
+
+.ho-effect a::before,
+.ho-effect a::after {
+ content: '';
+  position: absolute;
+  width: 100%;
+  left: 0;
+}
+.ho-effect a::before {
+  background-color: #54b3d6;
+  height: 2px;
+  bottom: 0;
+  transform-origin: 100% 50%;
+  transform: scaleX(0);
+  transition: transform .3s cubic-bezier(0.76, 0, 0.24, 1);
+}
+.ho-effect a::after {
+  content: attr(data-replace);
+  height: 100%;
+  top: 0;
+  transform-origin: 100% 50%;
+  transform: translate3d(200%, 0, 0);
+  transition: transform .3s cubic-bezier(0.76, 0, 0.24, 1);
+  color: #54b3d6;
+}
+
+.ho-effect a:hover::before {
+  transform-origin: 0% 50%;
+  transform: scaleX(1);
+}
+.ho-effect a:hover::after {
+  transform: translate3d(0, 0, 0);
+}
+
+.ho-effect a span {
+  display: inline-block;
+  transition: transform .3s cubic-bezier(0.76, 0, 0.24, 1);
+}
+
+.ho-effect a:hover span {
+  transform: translate3d(-200%, 0, 0);
+}
+
+
+
+.ho-effect a {
+  text-decoration: none;
+  color: #ddd;
+  font-weight: 700;
+  vertical-align: top;
+}
+.ho-effect-loop a {
+  text-decoration: none;
+  color: #000!important;
+  font-weight: 700;
+  vertical-align: middle;
+}
+.ho-effect-loop a::after {
+  content: attr(data-replace);
+  height: 100%;
+  top: 8px !important;
+  transform-origin: 100% 50%;
+  transform: translate3d(200%, 0, 0);
+  transition: transform .3s cubic-bezier(0.76, 0, 0.24, 1);
+  color: #54b3d6;
+}
 /* Add this to your global CSS file */
 .cursor {
   display: inline-block;
